// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user viewing the component should see a consistent layout if no location is saved 1`] = `
<mock-render
  __ngContext__={[Function LRootView]}
>
  <basics-location>
    <mat-card>
      <mat-card-content>
        <form
          class="flex content-center flex-col"
        >
          <mat-form-field
            class="mb-3"
          >
            <mat-label>
              Location
            </mat-label>
            <input
              formcontrolname="location"
              matinput=""
              placeholder="Enter location"
            />
            <mat-error>
              Please enter a location before searching!
            </mat-error>
          </mat-form-field>
          <button
            color="primary"
            mat-raised-button=""
          >
            Search
          </button>
        </form>
      </mat-card-content>
    </mat-card>
  </basics-location>
</mock-render>
`;

exports[`A user viewing the component should see a consistent layout with their saved location 1`] = `
<mock-render
  __ngContext__={[Function LRootView]}
>
  <basics-location>
    <mat-card>
      <mat-card-subtitle>
        Current saved location: Stuttgart
      </mat-card-subtitle>
      <mat-card-content>
        <form
          class="flex content-center flex-col"
        >
          <mat-form-field
            class="mb-3"
          >
            <mat-label>
              Location
            </mat-label>
            <input
              formcontrolname="location"
              matinput=""
              placeholder="Enter location"
            />
            <mat-error>
              Please enter a location before searching!
            </mat-error>
          </mat-form-field>
          <button
            color="primary"
            mat-raised-button=""
          >
            Search
          </button>
        </form>
      </mat-card-content>
    </mat-card>
  </basics-location>
</mock-render>
`;
